tests/NormalTests/paczka1/small_fuzzy/81566086.err
Error in line 12: 03ADZNuR S221 -1,0
Error in line 13: %yp6uzq A427 6,3
